# USBRetro

./: .gitignore  .gitmodules  BUILD.md  CLAUDE.md  Dockerfile  LICENSE  MODERNIZE.md  Makefile  README.md  TRADEMARK.md  build_all_products.sh  build_firmware.sh
.github/: FUNDING.yml
Membase/src/: CMakeLists.txt  Readme.md  make_ada.sh  membase.c  membase.pio
PCEMouse/src/: CMakeLists.txt  build_ada.sh  build_ada_kb2040.sh  clock.pio  clock_in.pio  clock_out.pio  globals.h  hid_app.c  hid_parser.h  main.c  plex.pio  polyface_read.pio  polyface_send.pio  select.pio  tusb_config.h  ws2812.c  xinput_app.c  xinput_host.c  xinput_host.h
PCEMouse/src/devices/: 8bitdo_bta.c  8bitdo_bta.h  8bitdo_m30.c  8bitdo_m30.h  8bitdo_neo.c  8bitdo_pce.c  8bitdo_pce.h  device_interface.h  device_registry.c  device_registry.h  dragonrise.c  gamecube_adapter.c  hori_horipad.c  hori_pokken.c  logitech_wingman.c  sony_ds3.c  sony_ds3.h  sony_ds4.c  sony_ds4.h  sony_ds5.c  sony_ds5.h  sony_psc.c  sony_psc.h  switch_pro.c  triple_adapter_v1.c  triple_adapter_v1.h  triple_adapter_v2.c  triple_adapter_v2.h
PCEMouse/src/sdkfile/: adafruit_kb2040.h
PCFXMouse/src/: CMakeLists.txt  build.sh  build_ada.sh  clock.pio  hid_app.c  main.c  pcfxplex.pio
src/: CMakeLists.txt  build_ada_kb2040.sh  build_ada_qtpy.sh  build_rpi_pico.sh  build_rpi_pico_debug.sh  build_waveshare_rp2040_zero.sh  codes.h  globals.h  hid_app.c  main.c  players.c  tusb_config.h  xinput_app.c
src/apps/3dousb/: app.c  main.c
src/apps/bt2usb/: app.c  app.h  app_config.h
src/apps/controller/: app.c  app.h  app_config.h  profiles.h
src/apps/gcusb/: app.c  main.c
src/apps/loopyusb/: app.c  app.h  main.c
src/apps/nuonusb/: app.c  app.h  main.c
src/apps/snes23do/: app.c  app.h
src/apps/snes2usb/: app.c  app.h  app_config.h  profiles.h
src/apps/usb23do/: app.c  app.h  profiles.h
src/apps/usb2gc/: app.c  app.h  led_config.h  profiles.h
src/apps/usb2loopy/: app.c  app.h  profiles.h
src/apps/usb2nuon/: app.c  app.h  profiles.h
src/apps/usb2pce/: app.c  app.h  main.c
src/apps/usb2uart/: app.c  app.h  app_config.h
src/apps/usb2usb/: app.c  app.h  app_config.h
src/apps/usb2xb1/: app.c  app.h  profiles.h
src/apps/usb2xb1ctrl/: app.c
src/apps/xboxadapter/: app.c  main.c
src/boards/: build_ada_feather_usbhost.sh  build_ada_macropad.sh  build_pico2_w.sh  build_pico_w.sh  build_rpi_pico.sh
src/bt/bthid/: bthid.c  bthid.h  bthid_registry.c  bthid_registry.h
src/bt/btstack/: btstack_config.h  btstack_host.c  btstack_host.h
src/bt/transport/: bt_transport.c  bt_transport.h  bt_transport_cyw43.c  bt_transport_usb.c
src/common/: codes.c  codes.h  flash_settings.c  flash_settings.h  globals.h  input_event.h  output.c  output_interface.h  players.c  players.h  profile_indicator.c  ws2812.c
src/config/: default.json  eggzact123.json  generate_config.py
src/console/: gamecube.c  gamecube.h  nuon.h  pcengine.h
src/console/3do/: 3do.c  3do.h  led_config.h
src/console/gamecube/: gamecube.c  gamecube.h  gamecube_config.h
src/console/loopy/: led_config.h  loopy.c  loopy.h  loopy.pio
src/console/nuon/: led_config.h  nuon.c  nuon.h
src/console/pcengine/: clock.pio  led_config.h  pcengine.c  pcengine.h  plex.pio
src/console/xboxone/: led_config.h  xboxone.c  xboxone.h
src/core/: buttons.h  feedback.c  feedback.h  globals.h  input_event.h  input_interface.h  output_interface.h  uart.h
src/core/router/: router.c  router.h
src/core/services/button/: button.c  button.h
src/core/services/codes/: codes.c  codes.h
src/core/services/display/: display.c  display.h
src/core/services/hotkey/: hotkey.c  hotkey.h
src/core/services/hotkeys/: hotkey.c  hotkey.h  hotkeys.c  hotkeys.h
src/core/services/leds/: leds.c  leds.h  ws2812.c
src/core/services/players/: feedback.c  feedback.h  manager.c  manager.h  profile.c  profile.h  profile_feedback.c  profile_feedback.h  profiles.h
src/core/services/profile/: profile.c  profile.h
src/core/services/profiles/: profile.c  profile.h  profile_feedback.c  profile_indicator.c  profile_indicator.h  profiles.c  profiles.h
src/core/services/speaker/: speaker.c  speaker.h
src/core/services/storage/: flash.c  flash.h  storage.c  storage.h
src/core/uart/: uart_protocol.h
src/devices/: 8bitdo_bta.c  8bitdo_bta.h  8bitdo_m30.c  8bitdo_m30.h  8bitdo_neo.c  8bitdo_neo.h  8bitdo_pce.c  8bitdo_pce.h  device_interface.h  device_registry.c  device_registry.h  dragonrise.c  dragonrise.h  gamecube_adapter.c  gamecube_adapter.h  hid_gamepad.c  hid_gamepad.h  hid_keyboard.c  hid_keyboard.h  hid_mouse.c  hid_mouse.h  hori_horipad.c  hori_horipad.h  hori_pokken.c  hori_pokken.h  logitech_wingman.c  logitech_wingman.h  sega_astrocity.c  sega_astrocity.h  sony_ds3.c  sony_ds3.h  sony_ds4.c  sony_ds4.h  sony_ds5.c  sony_ds5.h  sony_psc.c  sony_psc.h  switch_pro.c  switch_pro.h  triple_adapter_v1.c  (+3 more)
src/gpio/: gpio_input.c  gpio_input.h
src/gpio/configs/: alpakka.h  fisherprice.h  macropad.h
src/native/device/3do/: 3do_buttons.h  3do_config.h  3do_device.c  3do_device.h  output.pio  sampling.pio
src/native/device/gamecube/: gamecube_buttons.h  gamecube_config.h  gamecube_device.c  gamecube_device.h
src/native/device/loopy/: loopy_buttons.h  loopy_device.c  loopy_device.h
src/native/device/nuon/: nuon_buttons.h  nuon_device.c  nuon_device.h
src/native/device/pcengine/: pcengine_buttons.h  pcengine_device.c  pcengine_device.h  plex.pio  select.pio
src/native/device/uart/: uart_device.c  uart_device.h
src/native/host/: host_interface.h
src/pad/: pad_input.c  pad_input.h
src/pad/configs/: alpakka.h  fisherprice.h  macropad.h
src/usb/usbd/: tud_xbone.c  tud_xbone.h  tud_xid.c  tud_xid.h  tud_xinput.c  tud_xinput.h  usbd.c  usbd.h  xgip_protocol.c  xgip_protocol.h
src/usb/usbh/: usbh.c  usbh.h
src/usbh/: 8bitdo_m30.h  8bitdo_neo.c  hid_mouse.h  hori_pokken.h  sony_ds5.h  switch_pro.h
src/usbh/generic/: hid_gamepad.h  hid_keyboard.h
src/usbh/hid/: device_registry.c  device_registry.h  hid.c  hid_device.h  hid_registry.c
src/usbh/protocols/: hid.c  xinput.c
(+290 files in other folders)
